--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,26 @@
     <link rel="stylesheet" href="dist/styles/test.css">
   </head>
   <body>
+    <svg style="display: none" xmlns="http://www.w3.org/2000/svg">
+      <symbol id="icon_eye" viewBox="0 0 48 48">
+        <style type="text/css">.st0{fill:none;}</style>
+        <path d="M675.5,204.6c-0.9,0-1.6-0.6-1.8-1.4l-1-4.7c-1.5-0.4-2.9-0.9-4.2-1.7l-4.1,2.7c-0.3,0.2-0.6,0.3-1,0.3
+  c-0.5,0-0.9-0.2-1.3-0.5l-2.7-2.7c-0.6-0.6-0.7-1.6-0.2-2.3l2.7-4.1c-0.7-1.2-1.2-2.5-1.6-3.8l-4.8-1c-0.8-0.2-1.4-0.9-1.4-1.8v-3.8
+  c0-0.9,0.6-1.6,1.4-1.8l4.8-1c0.4-1.3,0.9-2.6,1.6-3.8l-2.7-4.1c-0.5-0.7-0.4-1.7,0.2-2.3l2.7-2.7c0.3-0.3,0.8-0.5,1.3-0.5
+  c0.4,0,0.7,0.1,1,0.3l4.1,2.7c1.3-0.8,2.7-1.3,4.2-1.7l1-4.7c0.2-0.8,0.9-1.4,1.8-1.4h3.8c0.9,0,1.6,0.6,1.8,1.4l1,4.9
+  c1.2,0.4,2.3,0.9,3.4,1.5l4.1-2.7c0.3-0.2,0.6-0.3,1-0.3c0.5,0,0.9,0.2,1.3,0.5l2.7,2.7c0.6,0.6,0.7,1.6,0.2,2.3l-2.7,4.1
+  c0.7,1.2,1.2,2.5,1.6,3.8l4.8,1c0.8,0.2,1.4,0.9,1.4,1.8v3.8c0,0.9-0.6,1.6-1.4,1.8l-4.8,1c-0.4,1.3-0.9,2.6-1.6,3.8l2.7,4.1
+  c0.5,0.7,0.4,1.7-0.2,2.3l-2.7,2.7c-0.3,0.3-0.8,0.5-1.3,0.5l0,0c-0.4,0-0.7-0.1-1-0.3l-4.1-2.7c-1.1,0.6-2.2,1.1-3.4,1.5l-1,4.9
+  c-0.2,0.8-0.9,1.4-1.8,1.4H675.5z M677,173.7c-1.1,0-2.3,0.2-3.4,0.7c-1.7,0.7-3,2-3.7,3.7c-1.1,2.7-0.9,5.5,0.6,7.7
+  c1.5,2.2,3.9,3.5,6.5,3.5c1.1,0,2.3-0.2,3.4-0.7c1.7-0.7,3-2,3.7-3.7c1.1-2.7,0.9-5.5-0.6-7.7C682.1,175.1,679.6,173.7,677,173.7z"></path>
+        <rect class="st0" x="653" y="157.6" width="48" height="48"></rect>
+        <rect class="st0" x="233" y="277.6" width="48" height="48"></rect>
+        <path d="M239.6,310.6l-2.4,8.7c-0.4,1.4,0.9,2.6,2.2,2.2l8.6-2.4l21.7-21.7l-8.5-8.5L239.6,310.6z M276.3,290.8
+  c0.9-0.9,0.9-2.3,0-3.2l-5.3-5.3c-0.9-0.9-2.3-0.9-3.2,0l-4.1,4.1l8.5,8.5L276.3,290.8z"></path>
+        <path d="M24,12.5C12.7,12.5,4,24,4,24s8.7,11.5,20,11.5S44,24,44,24S35.3,12.5,24,12.5z M24,32c-4.4,0-8-3.6-8-8c0-4.4,3.6-8,8-8
+  s8,3.6,8,8C32,28.4,28.4,32,24,32z"></path>
+      </symbol>
+    </svg>
     <script src="./index.js"></script>
   </body>
 </HTML>
