Fixed numbers not being set as attributes

--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
     <title>Title</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="dist/styles/test.css">
+    <link rel="stylesheet" href="test.css">
   </head>
   <body>
     <svg style="display: none" xmlns="http://www.w3.org/2000/svg">
