Added test for Component extending its prototype, cleaned that code

--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="test.css">
   </head>
   <body>
+    <div id="log-target"></div>
     <svg style="display: none" xmlns="http://www.w3.org/2000/svg">
       <symbol id="icon_eye" viewBox="0 0 48 48">
         <style type="text/css">.st0{fill:none;}</style>
